Issue #3 Resolved: Align Icons and Fix Padding Diego requested revisions on footer padding and social icon alignment. This shouldnt be an issue in the future. Issue closed #3

--- a/css/video.css
+++ b/css/video.css
@@ -28,6 +28,13 @@
     padding-right: 20%;
 }
 
+#social-icons img {
+  display: inline-block;
+  vertical-align: middle;
+  max-height: 100%;
+  height:2em;
+}
+
 .visible { display:initial; }
 .hidden { display:none; }
 #logo img {padding:1em;}
